# cute-app-plugin-example

./: CMakeLists.txt  Main.qml  README.md  main.cpp
plugins/: PluginContent.qml  PluginInterface.qml
plugins/dummy/: DummyContent.qml  plugin.qml
